# agent-memory-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
_test_bugcheck/: memory.db
agent_memory/: __init__.py  cli.py  memory.py  prune.py  search.py  server.py  storage.py
examples/: demo.py
tests/: test_edge.py  test_memory.py
