[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-lite"
version = "0.1.0"
description = "Lightweight long-term memory for AI agents — semantic search, auto-prune, SQLite backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "sunshine", email = "sunshine@studiopig.dev"}
]
keywords = ["ai-agent", "agent-memory", "semantic-search", "context-management", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
semantic = ["sentence-transformers", "numpy"]

[project.urls]
Homepage = "https://github.com/studiopig/agent-memory-lite"
Repository = "https://github.com/studiopig/agent-memory-lite"
